# kangnamgu0724

./: README.md  app.py  pyproject.toml  requirements.txt  run.py
app/static/css/: ai-education-style.css  style.css
app/static/js/: ai-education-animations.js  main.js
app/templates/: ai_education_slide_viewer.html  base.html  index.html  slide_viewer.html  slides_list.html
config/: config.py
content/slides/: ai-education-environmental-instructor.yaml  python-basics.yaml  web-development.yaml
